# plugins_example

./: CMakeLists.txt  Dockerfile  plugin_to_load
example_plugin_1/: CMakeLists.txt  plugin1.cpp  plugin1.h
example_plugin_2/: CMakeLists.txt  plugin2.cpp  plugin2.h
include/: Interface.hpp
src/: main.cpp
