CMAKE_MINIMUM_REQUIRED(VERSION 3.10)


PROJECT(Plugins CXX)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_COMPILER g++)
SET(POSITION_INDEPENDENT_CODE True)

SET(CMAKE_CXX_FLAGS "-pie")

ADD_EXECUTABLE(Plugins src/main.cpp)

TARGET_INCLUDE_DIRECTORIES(Plugins PUBLIC include/)
TARGET_LINK_LIBRARIES(Plugins PUBLIC ${CMAKE_DL_LIBS})


